--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $white;
+	background: ("https://media.giphy.com/media/9ZL5EhLHNCKDm/giphy.gif");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
